2004-04-29  Al Riddoch  <alriddoch@zepler.org>

* Eris/Player.h, Eris/Player.cpp: Accept logins from any account type,
  not just player.

* Eris/Entity.h: Implement missing methods.

2004-04-26  Al Riddoch  <alriddoch@zepler.org>

* Final tweaks to the filename changes.

2004-04-24 James Turner <james@worldforge.org>

* Pre-work for making source file naming capitalization
  consistent (they will all be LikeThis.cpp) - change #includes, 
  and the Makefile.am

2004-04-14 James Turner <james@worldforge.org>

* Sort autoXXX compilation of tests

2004-03-22 James Turner <james@worldforge.org>

* Expand the tests, get more of them working (note you will need Atlas-C++ 0.6
  modifications at present, so best not to bother)
* Fix little bugs all over Player, since it's now being tested, very slightly.
  Login works, as does looking at characters.
* StubServer mechanics to support the above.
* Initial playing around towards registering Atlas factory methods for dynamic
  types, needs more Atlas API work to do anything.

2004-03-18 James Turner <james@worldforge.org>

* Make the stubServer uses sk_poll, so the login test is closer to working,
  at least data is moving over the stream now.

2004-03-17  Kai Blin  <blin@gmx.net>
* eris.dox.in: updated to work with a current version of doxygen

2004-03-16 James Turner <james@worldforge.org>

* Getting the in-progress test code to build, so it's not such
  an awesome task later. Note the tests still don't run, much less
  do anything, that should happen in the next few days.

2004-03-13 James Turner <james@worldforge.org>

* Remove debug nosie from BaseConnection and Metaserver
* Start adding test harness code, not currently compiled but soon.

2004-03-09  Al Riddoch  <alriddoch@zepler.org>

* Increment API version to 1.3 devel API. Next stable API will be 1.4.

2004-03-08  Al Riddoch  <alriddoch@zepler.org>

* Eris/Avatar.cpp, Eris/entityRouter.h, Eris/igRouter.cpp: Three files
  still missing newlines at the end.
